[package]
name = "thruster-session"
version = "0.1.0"
edition = "2021"
authors = ["Tronikel <contactdonatas@gmail.com>"]
license = "GPL-3.0-or-later"
description = "A non-opinionated session middleware for thruster"
repository = "https://github.com/Tronikelis/thruster-session"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
hmac = "0.12.1"
jwt = "0.16.0"
serde = "1.0.163"
serde_json = "1.0.96"
sha2 = "0.10.6"
thruster = { version = "1.3.3", features = ["hyper_server"] }
tokio = "1.28.2"
