[package]
name = "thruster-session"
version = "0.1.0"
edition = "2021"
authors = ["Tronikel <contactdonatas@gmail.com>"]
license = "GPL-3.0-or-later"
description = "A non-opinionated session middleware for thruster"
repository = "https://github.com/Tronikelis/thruster-session"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
jwt_session = ["dep:jwt"]
redis_session = ["dep:redis", "dep:nanoid", "dep:hex"]

[dependencies]
# jwt_session
jwt = { version = "0.16.0", optional = true }

# redis_session
nanoid = { version = "0.4.0", optional = true }
redis = { version = "0.23.0", features = [
    "connection-manager",
    "tokio-comp",
], optional = true }
hex = { version = "0.4.3", optional = true }

async-trait = "0.1.68"
hmac = "0.12.1"
serde = "1.0.163"
serde_json = "1.0.96"
sha2 = "0.10.6"
thruster = { version = "1.3.3", features = ["hyper_server"] }
tokio = "1.28.2"
